cmake_minimum_required(VERSION 3.8 FATAL_ERROR)

project(NetworkController VERSION 0.88 LANGUAGES CXX)

get_directory_property(IS_SUBPROJECT PARENT_DIRECTORY)

add_subdirectory(protobuf)

set(CLIENT_LIB 
    client.cpp 
    client.h
   )
   
set(SERVER_LIB
    server.cpp
    server.h
   )

set(CONNECT_DIALOG
    connectdialog.cpp   connectdialog.h
    connectdialog.ui
   )
   
set(NETWORK_LIB 
    networkcontroller.cpp 
    networkcontroller.h 
    ${CLIENT_LIB} 
    ${SERVER_LIB}
    ${CONNECT_DIALOG}
    ${PROTOS_LIB}
   )

#add_library(NetworkController
#            STATIC
#            ${NETWORK_LIB}
#            )

#target_link_libraries(NetworkController AMURProtos)

#add_executable(TestNetController main.cpp)
#target_link_libraries(TestNetController NetworkController
    #AMURProtos
    #)
